sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.error
AlgCombSort11:10: error: not found: value i
	if (getValeur(i)==9 || getValeur(i)==10) {
                      ^AlgCombSort11:11: error: not found: value i
		setValeur(i,11)
                          ^