sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.code
def combSort11() {var lg = getNombreValeurs()
var ecart = getNombreValeurs()
var cond= false 

do {if ( ecart>1) {
	ecart = (ecart.toDouble / 1.3).toInt
	}
	if (getValeur(i)==9 || getValeur(i)==10) {
		setValeur(i,11)
	}
	cond=false
	for ( i <- 0 to lg-ecart-1)
 {if (plusPetit(i+ecart,i)) {
 	cond= true
 	echange(i+ecart, i)	
}
}
}
while (ecart>1 || cond==true)
}